emacs-version and erc-cmd-SV functions, and the leave the following
variables nil: emacs-build-system, emacs-build-time,
erc-emacs-build-time.

** Emacs no longer works on IRIX.  We expect that Emacs users are not
affected by this, as SGI stopped supporting IRIX in December 2013.


* Startup Changes in Emacs 25.2


* Changes in Emacs 25.2

---
** `C-x h' (`mark-whole-buffer') will now avoid marking the prompt
part of minibuffers.

---
** `find-library' now takes a prefix argument to pop to a different
window.

** `find-library', `help-function-def' and `help-variable-def' now run
`find-function-after-hook'.

---
** 'process-attributes' on Darwin systems now returns more information.

+++
** Several accessors for the value returned by 'file-attributes'
have been added.  They are: 'file-attribute-type',
'file-attribute-link-number', 'file-attribute-user-id',
'file-attribute-group-id', 'file-attribute-access-time',
'file-attribute-modification-time',
'file-attribute-status-change-time', 'file-attribute-size',
'file-attribute-modes', 'file-attribute-inode-number', and
'file-attribute-device-number'.

+++
** The new function 'buffer-hash' computes compute a fast, non-consing
hash of a buffer's contents.

---
** 'fill-paragraph' no longer marks the buffer as changed unless it
actually changed something.

---
** The locale language name 'ca' is now mapped to the language
environment 'Catalan', which has been added.

---
** 'align-regexp' has a separate history for its interactive argument.
'align-regexp' no longer shares its history with all other
history-less functions that use 'read-string'.

+++
** The networking code has been reworked so that it's more
asynchronous than it was (when specifying :nowait t in
'make-network-process').  How asynchronous it is varies based on the
capabilities of the system, but on a typical GNU/Linux system the DNS
resolution, the connection, and (for TLS streams) the TLS negotiation